# zeropath

./: .env.example  .gitignore  AUDIT_PROMPT.md  Makefile  README.md  phases.md  pyproject.toml  test_models_standalone.py  test_quick.py
example_contracts/: ProxyExample.sol  SimpleToken.sol  VaultProtocol.sol
src/zeropath/: __init__.py  asset_flow.py  bytecode_decompiler.py  cli.py  config.py  exceptions.py  graph_builder.py  graph_db.py  logging_config.py  models.py  onchain_fetcher.py  parser.py  proxy_detector.py  storage_analyzer.py
src/zeropath/adversarial/: __init__.py  base.py  consensus.py  debate.py  models.py  swarm.py
src/zeropath/adversarial/agents/: __init__.py  access.py  composability.py  flash_loan.py  governance.py  integer_math.py  oracle.py  reentrancy.py
src/zeropath/invariants/: __init__.py  engine.py  exploit_db.py  formal_spec.py  models.py  oracle_mapper.py  patterns.py  rag.py
src/zeropath/invariants/detectors/: __init__.py  access_control.py  balance_consistency.py  base.py  collateralization.py  cross_protocol.py  flash_loan_safety.py  governance.py  liquidity_conservation.py  oracle_manipulation.py  reentrancy.py  share_accounting.py  value_conservation.py
src/zeropath/sequencer/: __init__.py  base.py  models.py  sequencer.py
src/zeropath/sequencer/builders/: __init__.py  access_control.py  flash_loan.py  governance.py  integer_math.py  oracle.py  reentrancy.py
src/zeropath/sequencer/codegen/: __init__.py  foundry.py  hardhat.py
tests/: __init__.py  test_adversarial_phase3.py  test_asset_flow.py  test_bytecode_decompiler.py  test_integration.py  test_invariants_phase2.py  test_models.py  test_onchain_fetcher.py  test_parser.py  test_proxy_detector.py  test_storage_analyzer.py
