[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeropath"
version = "0.1.0"
description = "Production-grade Solidity smart contract analyzer - builds protocol graphs for security research"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Security Research Team" }]

dependencies = [
    "slither-analyzer==0.10.1",
    "neo4j==5.15.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "click==8.1.7",
    "rich==13.7.0",
    "structlog==24.1.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "ruff==0.1.8",
    "pre-commit==3.5.0",
]

[project.scripts]
zeropath = "zeropath.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zeropath = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/zeropath --cov-report=term"

[tool.coverage.run]
source = ["src/zeropath"]
